adjusting notes